1. create a post of useful url list. 2. adjust menu of main/sidebar

--- a/index.html
+++ b/index.html
@@ -60,15 +60,11 @@
     <h4 class='title widget-title'>Menu</h4>
   </header><nav id='sidebar-menu' class='menu sidebar-menu' aria-label='Sidebar Menu'>
     <div class='container'>
-      <ul><li class='item current'>
-  <a aria-current='page' href='/'>Home</a></li><li class='item'>
-  <a href='/englishnews/'>English</a></li><li class='item'>
-  <a href='/machinelearning/'>A.I.</a></li><li class='item'>
+      <ul><li class='item'>
   <a href='/python/'>Python</a></li><li class='item'>
   <a href='/julia/'>Julia</a></li><li class='item'>
   <a href='/web/'>Web</a></li><li class='item'>
-  <a href='/developmenttools/'>Tools</a></li><li class='item'>
-  <a href='https://github.com/bradleetw/hello-world'>Repo</a></li></ul>
+  <a href='/developmenttools/'>Tools</a></li></ul>
     </div>
   </nav>
 
@@ -140,14 +136,6 @@
         <a href='/englishnews/'>English</a>
       </li><li class='item'>
         <a href='/machinelearning/'>A.I.</a>
-      </li><li class='item'>
-        <a href='/python/'>Python</a>
-      </li><li class='item'>
-        <a href='/julia/'>Julia</a>
-      </li><li class='item'>
-        <a href='/web/'>Web</a>
-      </li><li class='item'>
-        <a href='/developmenttools/'>Tools</a>
       </li><li class='item'>
         <a href='https://github.com/bradleetw/hello-world'>Repo</a>
       </li></ul>
