--- a/web/staticsitegenerator/hugo/usehugo_2/index.html
+++ b/web/staticsitegenerator/hugo/usehugo_2/index.html
@@ -67,14 +67,10 @@ config.toml Hugo 網站主要是透過 config.toml 這個檔案來調控, 當你
   </header><nav id='sidebar-menu' class='menu sidebar-menu' aria-label='Sidebar Menu'>
     <div class='container'>
       <ul><li class='item'>
-  <a href='/'>Home</a></li><li class='item'>
-  <a href='/englishnews/'>English</a></li><li class='item'>
-  <a href='/machinelearning/'>A.I.</a></li><li class='item'>
   <a href='/python/'>Python</a></li><li class='item'>
   <a href='/julia/'>Julia</a></li><li class='item'>
   <a href='/web/'>Web</a></li><li class='item'>
-  <a href='/developmenttools/'>Tools</a></li><li class='item'>
-  <a href='https://github.com/bradleetw/hello-world'>Repo</a></li></ul>
+  <a href='/developmenttools/'>Tools</a></li></ul>
     </div>
   </nav>
 
@@ -146,14 +142,6 @@ config.toml Hugo 網站主要是透過 config.toml 這個檔案來調控, 當你
         <a href='/englishnews/'>English</a>
       </li><li class='item'>
         <a href='/machinelearning/'>A.I.</a>
-      </li><li class='item'>
-        <a href='/python/'>Python</a>
-      </li><li class='item'>
-        <a href='/julia/'>Julia</a>
-      </li><li class='item'>
-        <a href='/web/'>Web</a>
-      </li><li class='item'>
-        <a href='/developmenttools/'>Tools</a>
       </li><li class='item'>
         <a href='https://github.com/bradleetw/hello-world'>Repo</a>
       </li></ul>
