--- a/englishnews/theguardian/trumpnews_0807/index.html
+++ b/englishnews/theguardian/trumpnews_0807/index.html
@@ -71,14 +71,10 @@ Hours after saying he had a &ldquo;very good meeting&rdquo; with the publisher o
   </header><nav id='sidebar-menu' class='menu sidebar-menu' aria-label='Sidebar Menu'>
     <div class='container'>
       <ul><li class='item'>
-  <a href='/'>Home</a></li><li class='item'>
-  <a href='/englishnews/'>English</a></li><li class='item'>
-  <a href='/machinelearning/'>A.I.</a></li><li class='item'>
   <a href='/python/'>Python</a></li><li class='item'>
   <a href='/julia/'>Julia</a></li><li class='item'>
   <a href='/web/'>Web</a></li><li class='item'>
-  <a href='/developmenttools/'>Tools</a></li><li class='item'>
-  <a href='https://github.com/bradleetw/hello-world'>Repo</a></li></ul>
+  <a href='/developmenttools/'>Tools</a></li></ul>
     </div>
   </nav>
 
@@ -150,14 +146,6 @@ Hours after saying he had a &ldquo;very good meeting&rdquo; with the publisher o
         <a href='/englishnews/'>English</a>
       </li><li class='item'>
         <a href='/machinelearning/'>A.I.</a>
-      </li><li class='item'>
-        <a href='/python/'>Python</a>
-      </li><li class='item'>
-        <a href='/julia/'>Julia</a>
-      </li><li class='item'>
-        <a href='/web/'>Web</a>
-      </li><li class='item'>
-        <a href='/developmenttools/'>Tools</a>
       </li><li class='item'>
         <a href='https://github.com/bradleetw/hello-world'>Repo</a>
       </li></ul>
