--- a/machinelearning/index.html
+++ b/machinelearning/index.html
@@ -61,14 +61,10 @@
   </header><nav id='sidebar-menu' class='menu sidebar-menu' aria-label='Sidebar Menu'>
     <div class='container'>
       <ul><li class='item'>
-  <a href='/'>Home</a></li><li class='item'>
-  <a href='/englishnews/'>English</a></li><li class='item current'>
-  <a aria-current='page' href='/machinelearning/'>A.I.</a></li><li class='item'>
   <a href='/python/'>Python</a></li><li class='item'>
   <a href='/julia/'>Julia</a></li><li class='item'>
   <a href='/web/'>Web</a></li><li class='item'>
-  <a href='/developmenttools/'>Tools</a></li><li class='item'>
-  <a href='https://github.com/bradleetw/hello-world'>Repo</a></li></ul>
+  <a href='/developmenttools/'>Tools</a></li></ul>
     </div>
   </nav>
 
@@ -141,14 +137,6 @@
       </li><li class='item current'>
         <a aria-current='page' href='/machinelearning/'>A.I.</a>
       </li><li class='item'>
-        <a href='/python/'>Python</a>
-      </li><li class='item'>
-        <a href='/julia/'>Julia</a>
-      </li><li class='item'>
-        <a href='/web/'>Web</a>
-      </li><li class='item'>
-        <a href='/developmenttools/'>Tools</a>
-      </li><li class='item'>
         <a href='https://github.com/bradleetw/hello-world'>Repo</a>
       </li></ul>
   </div>
@@ -180,10 +168,13 @@
 <div class='entry'>
   <div class='container entry-content'>
   <blockquote>
-<p>~</p>
-</blockquote>
+<p>Reinforcement Learning:
+<a href="http://incompleteideas.net/book/bookdraft2017nov5.pdf" target="_blank">Reinforcement Learning An Introduction</a></p>
+
+<p>書籍: <a href="https://item.jd.com/12261093.html" target="_blank">深入浅出强化学习：原理入门</a></p>
 
 <hr />
+</blockquote>
 
 </div>
 
