--- a/web/index.html
+++ b/web/index.html
@@ -61,14 +61,10 @@
   </header><nav id='sidebar-menu' class='menu sidebar-menu' aria-label='Sidebar Menu'>
     <div class='container'>
       <ul><li class='item'>
-  <a href='/'>Home</a></li><li class='item'>
-  <a href='/englishnews/'>English</a></li><li class='item'>
-  <a href='/machinelearning/'>A.I.</a></li><li class='item'>
   <a href='/python/'>Python</a></li><li class='item'>
   <a href='/julia/'>Julia</a></li><li class='item current'>
   <a aria-current='page' href='/web/'>Web</a></li><li class='item'>
-  <a href='/developmenttools/'>Tools</a></li><li class='item'>
-  <a href='https://github.com/bradleetw/hello-world'>Repo</a></li></ul>
+  <a href='/developmenttools/'>Tools</a></li></ul>
     </div>
   </nav>
 
@@ -140,14 +136,6 @@
         <a href='/englishnews/'>English</a>
       </li><li class='item'>
         <a href='/machinelearning/'>A.I.</a>
-      </li><li class='item'>
-        <a href='/python/'>Python</a>
-      </li><li class='item'>
-        <a href='/julia/'>Julia</a>
-      </li><li class='item current'>
-        <a aria-current='page' href='/web/'>Web</a>
-      </li><li class='item'>
-        <a href='/developmenttools/'>Tools</a>
       </li><li class='item'>
         <a href='https://github.com/bradleetw/hello-world'>Repo</a>
       </li></ul>
