--- a/developmenttools/iterm2setting/index.html
+++ b/developmenttools/iterm2setting/index.html
@@ -74,7 +74,8 @@ $ wget https://github.com/robbyrussell/oh-my-zsh/raw/master/tools/install.sh $ b
   <a href='/python/'>Python</a></li><li class='item'>
   <a href='/julia/'>Julia</a></li><li class='item'>
   <a href='/web/'>Web</a></li><li class='item'>
-  <a href='/developmenttools/'>Tools</a></li></ul>
+  <a href='/developmenttools/'>Tools</a></li><li class='item'>
+  <a href='/post/usefulurl/'>Useful URL</a></li></ul>
     </div>
   </nav>
 
