--- a/englishnews/mit/therapistswithvr_0808/index.html
+++ b/englishnews/mit/therapistswithvr_0808/index.html
@@ -76,7 +76,8 @@
   <a href='/python/'>Python</a></li><li class='item'>
   <a href='/julia/'>Julia</a></li><li class='item'>
   <a href='/web/'>Web</a></li><li class='item'>
-  <a href='/developmenttools/'>Tools</a></li></ul>
+  <a href='/developmenttools/'>Tools</a></li><li class='item'>
+  <a href='/post/usefulurl/'>Useful URL</a></li></ul>
     </div>
   </nav>
 
