--- a/englishnews/theguardian/trumpnews_0807/index.html
+++ b/englishnews/theguardian/trumpnews_0807/index.html
@@ -74,7 +74,8 @@ Hours after saying he had a &ldquo;very good meeting&rdquo; with the publisher o
   <a href='/python/'>Python</a></li><li class='item'>
   <a href='/julia/'>Julia</a></li><li class='item'>
   <a href='/web/'>Web</a></li><li class='item'>
-  <a href='/developmenttools/'>Tools</a></li></ul>
+  <a href='/developmenttools/'>Tools</a></li><li class='item'>
+  <a href='/post/usefulurl/'>Useful URL</a></li></ul>
     </div>
   </nav>
 
