--- a/web/deployment/githubblog/usegithub_1/index.html
+++ b/web/deployment/githubblog/usegithub_1/index.html
@@ -66,7 +66,8 @@ refer to: What is GitHub Pages?
   <a href='/python/'>Python</a></li><li class='item'>
   <a href='/julia/'>Julia</a></li><li class='item'>
   <a href='/web/'>Web</a></li><li class='item'>
-  <a href='/developmenttools/'>Tools</a></li></ul>
+  <a href='/developmenttools/'>Tools</a></li><li class='item'>
+  <a href='/post/usefulurl/'>Useful URL</a></li></ul>
     </div>
   </nav>
 
