--- a/web/staticsitegenerator/hugo/usehugo_2/index.html
+++ b/web/staticsitegenerator/hugo/usehugo_2/index.html
@@ -70,7 +70,8 @@ config.toml Hugo 網站主要是透過 config.toml 這個檔案來調控, 當你
   <a href='/python/'>Python</a></li><li class='item'>
   <a href='/julia/'>Julia</a></li><li class='item'>
   <a href='/web/'>Web</a></li><li class='item'>
-  <a href='/developmenttools/'>Tools</a></li></ul>
+  <a href='/developmenttools/'>Tools</a></li><li class='item'>
+  <a href='/post/usefulurl/'>Useful URL</a></li></ul>
     </div>
   </nav>
 
