new post - english study, Genetic genealogy

--- a/developmenttools/gitstudy/gitrelated_1/index.html
+++ b/developmenttools/gitstudy/gitrelated_1/index.html
@@ -51,7 +51,7 @@
     
     <div class='logo'>
       <a href='/'>
-        <img src='/images/brainstorm.png'>
+        <img src='/images/test.png'>
       </a>
     </div>
     
@@ -92,7 +92,7 @@
       </li><li>
         <a href='/tags/guardian' style='font-size:1em'>Guardian</a>
       </li><li>
-        <a href='/tags/mit' style='font-size:1em'>MIT</a>
+        <a href='/tags/mit' style='font-size:1.5em'>MIT</a>
       </li><li>
         <a href='/tags/nature' style='font-size:1em'>Nature</a>
       </li><li>
