--- a/developmenttools/iterm2setting/index.html
+++ b/developmenttools/iterm2setting/index.html
@@ -53,7 +53,7 @@ $ wget https://github.com/robbyrussell/oh-my-zsh/raw/master/tools/install.sh $ b
     
     <div class='logo'>
       <a href='/'>
-        <img src='/images/brainstorm.png'>
+        <img src='/images/test.png'>
       </a>
     </div>
     
@@ -94,7 +94,7 @@ $ wget https://github.com/robbyrussell/oh-my-zsh/raw/master/tools/install.sh $ b
       </li><li>
         <a href='/tags/guardian' style='font-size:1em'>Guardian</a>
       </li><li>
-        <a href='/tags/mit' style='font-size:1em'>MIT</a>
+        <a href='/tags/mit' style='font-size:1.5em'>MIT</a>
       </li><li>
         <a href='/tags/nature' style='font-size:1em'>Nature</a>
       </li><li>
