--- a/englishnews/mit/therapistswithvr_0808/index.html
+++ b/englishnews/mit/therapistswithvr_0808/index.html
@@ -55,7 +55,7 @@
     
     <div class='logo'>
       <a href='/'>
-        <img src='/images/brainstorm.png'>
+        <img src='/images/test.png'>
       </a>
     </div>
     
@@ -96,7 +96,7 @@
       </li><li>
         <a href='/tags/guardian' style='font-size:1em'>Guardian</a>
       </li><li>
-        <a href='/tags/mit' style='font-size:1em'>MIT</a>
+        <a href='/tags/mit' style='font-size:1.5em'>MIT</a>
       </li><li>
         <a href='/tags/nature' style='font-size:1em'>Nature</a>
       </li><li>
@@ -362,6 +362,16 @@
 </svg>
  Previous</span>
         <span class='screen-reader-text'>Previous post: </span>Trump blasts back after Times publisher decries &#39;enemy of the people&#39; attacks</a>
+    </div><div class='next-entry sep-before'>
+      <a href='/englishnews/mit/geneticgenealory_0814/'>
+        <span class='screen-reader-text'>Next post: </span>[MIT] Genetic genealogy is now solving recent crimes, not just cold cases<span aria-hidden='true'>Next <svg class='icon' viewbox='0 0 24 24' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' aria-hidden='true'>
+  
+  <line x1="4" y1="12" x2="20" y2="12"/>
+  <polyline points="14 6 20 12 14 18"/>
+  
+</svg>
+</span>
+      </a>
     </div></div>
 </nav>
 
