--- a/englishnews/nature/thereiswateronmars_0806/index.html
+++ b/englishnews/nature/thereiswateronmars_0806/index.html
@@ -53,7 +53,7 @@ A large saltwater lake seems to lurk under ice near Mars&rsquo; south pole. If c
     
     <div class='logo'>
       <a href='/'>
-        <img src='/images/brainstorm.png'>
+        <img src='/images/test.png'>
       </a>
     </div>
     
@@ -94,7 +94,7 @@ A large saltwater lake seems to lurk under ice near Mars&rsquo; south pole. If c
       </li><li>
         <a href='/tags/guardian' style='font-size:1em'>Guardian</a>
       </li><li>
-        <a href='/tags/mit' style='font-size:1em'>MIT</a>
+        <a href='/tags/mit' style='font-size:1.5em'>MIT</a>
       </li><li>
         <a href='/tags/nature' style='font-size:1em'>Nature</a>
       </li><li>
