--- a/englishnews/theguardian/trumpnews_0807/index.html
+++ b/englishnews/theguardian/trumpnews_0807/index.html
@@ -53,7 +53,7 @@ Hours after saying he had a &ldquo;very good meeting&rdquo; with the publisher o
     
     <div class='logo'>
       <a href='/'>
-        <img src='/images/brainstorm.png'>
+        <img src='/images/test.png'>
       </a>
     </div>
     
@@ -94,7 +94,7 @@ Hours after saying he had a &ldquo;very good meeting&rdquo; with the publisher o
       </li><li>
         <a href='/tags/guardian' style='font-size:1em'>Guardian</a>
       </li><li>
-        <a href='/tags/mit' style='font-size:1em'>MIT</a>
+        <a href='/tags/mit' style='font-size:1.5em'>MIT</a>
       </li><li>
         <a href='/tags/nature' style='font-size:1em'>Nature</a>
       </li><li>
