--- a/englishnews/mit/geneticgenealory_0814/index.html
+++ b/englishnews/mit/geneticgenealory_0814/index.html
@@ -77,7 +77,7 @@ What are the implications of these proposals?'>
   <a href='/julia/'>Julia</a></li><li class='item'>
   <a href='/web/'>Web</a></li><li class='item'>
   <a href='/developmenttools/'>Tools</a></li><li class='item'>
-  <a href='/post/usefulurl/'>Useful URL</a></li></ul>
+  <a href='/usefulurl/'>Useful URL</a></li></ul>
     </div>
   </nav>
 
