--- a/developmenttools/gitstudy/gitrelated_1/index.html
+++ b/developmenttools/gitstudy/gitrelated_1/index.html
@@ -73,7 +73,7 @@
   <a href='/julia/'>Julia</a></li><li class='item'>
   <a href='/web/'>Web</a></li><li class='item'>
   <a href='/developmenttools/'>Tools</a></li><li class='item'>
-  <a href='/post/usefulurl/'>Useful URL</a></li></ul>
+  <a href='/usefulurl/'>Useful URL</a></li></ul>
     </div>
   </nav>
 
