--- a/englishnews/nature/thereiswateronmars_0806/index.html
+++ b/englishnews/nature/thereiswateronmars_0806/index.html
@@ -75,7 +75,7 @@ A large saltwater lake seems to lurk under ice near Mars&rsquo; south pole. If c
   <a href='/julia/'>Julia</a></li><li class='item'>
   <a href='/web/'>Web</a></li><li class='item'>
   <a href='/developmenttools/'>Tools</a></li><li class='item'>
-  <a href='/post/usefulurl/'>Useful URL</a></li></ul>
+  <a href='/usefulurl/'>Useful URL</a></li></ul>
     </div>
   </nav>
 
