--- a/englishnews/theeconomist/googlenews_0803/index.html
+++ b/englishnews/theeconomist/googlenews_0803/index.html
@@ -73,7 +73,7 @@ On July 18th the European Commission hit Google with a record fine(天價罰款)
   <a href='/julia/'>Julia</a></li><li class='item'>
   <a href='/web/'>Web</a></li><li class='item'>
   <a href='/developmenttools/'>Tools</a></li><li class='item'>
-  <a href='/post/usefulurl/'>Useful URL</a></li></ul>
+  <a href='/usefulurl/'>Useful URL</a></li></ul>
     </div>
   </nav>
 
