--- a/web/index.html
+++ b/web/index.html
@@ -65,7 +65,7 @@
   <a href='/julia/'>Julia</a></li><li class='item current'>
   <a aria-current='page' href='/web/'>Web</a></li><li class='item'>
   <a href='/developmenttools/'>Tools</a></li><li class='item'>
-  <a href='/post/usefulurl/'>Useful URL</a></li></ul>
+  <a href='/usefulurl/'>Useful URL</a></li></ul>
     </div>
   </nav>
 
