--- a/web/staticsitegenerator/hugo/usehugo_1/index.html
+++ b/web/staticsitegenerator/hugo/usehugo_1/index.html
@@ -77,7 +77,7 @@ $ hugo version Hugo Static Site Generator v0.42.2 darwin/amd64  建立網站 $ h
   <a href='/julia/'>Julia</a></li><li class='item'>
   <a href='/web/'>Web</a></li><li class='item'>
   <a href='/developmenttools/'>Tools</a></li><li class='item'>
-  <a href='/post/usefulurl/'>Useful URL</a></li></ul>
+  <a href='/usefulurl/'>Useful URL</a></li></ul>
     </div>
   </nav>
 
