--- a/englishnews/theguardian/trumpnews_0807/index.html
+++ b/englishnews/theguardian/trumpnews_0807/index.html
@@ -320,7 +320,7 @@ Hours after saying he had a &ldquo;very good meeting&rdquo; with the publisher o
         <span class='screen-reader-text'>Previous post: </span>There&#39;s water on Mars! Signs of buried lake tantalize scientists.</a>
     </div><div class='next-entry sep-before'>
       <a href='/englishnews/mit/therapistswithvr_0808/'>
-        <span class='screen-reader-text'>Next post: </span>Therapists are augmenting eating-disorder treatment with virtual-reality headsets<span aria-hidden='true'>Next <svg class='icon' viewbox='0 0 24 24' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' aria-hidden='true'>
+        <span class='screen-reader-text'>Next post: </span>[MIT] Therapists are augmenting eating-disorder treatment with virtual-reality headsets<span aria-hidden='true'>Next <svg class='icon' viewbox='0 0 24 24' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' aria-hidden='true'>
   
   <line x1="4" y1="12" x2="20" y2="12"/>
   <polyline points="14 6 20 12 14 18"/>
