--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
   </div>
   <header class='item-header'>
     <h3 class='item-title'>
-      <a href='/englishnews/mit/therapistswithvr_0808/'>Therapists are augmenting eating-disorder treatment with virtual-reality headsets
+      <a href='/englishnews/mit/therapistswithvr_0808/'>[MIT] Therapists are augmenting eating-disorder treatment with virtual-reality headsets
       </a>
     </h3>
   </header>
