new a english study post about spiritually Finnish.

--- a/englishnews/mit/geneticgenealory_0814/index.html
+++ b/englishnews/mit/geneticgenealory_0814/index.html
@@ -100,6 +100,8 @@ What are the implications of these proposals?'>
       </li><li>
         <a href='/tags/nature' style='font-size:1em'>Nature</a>
       </li><li>
+        <a href='/tags/newyorktimes' style='font-size:1em'>NewYorkTimes</a>
+      </li><li>
         <a href='/tags/deployment' style='font-size:1em'>Deployment</a>
       </li><li>
         <a href='/tags/hugo' style='font-size:2em'>Hugo</a>
@@ -499,6 +501,16 @@ Ben会在那儿，我就放心了.</p>
 </svg>
  Previous</span>
         <span class='screen-reader-text'>Previous post: </span>[MIT] Therapists are augmenting eating-disorder treatment with virtual-reality headsets</a>
+    </div><div class='next-entry sep-before'>
+      <a href='/englishnews/newyorktimes/chinaintroverts_0815/'>
+        <span class='screen-reader-text'>Next post: </span>[New York Times] China&#39;s introverts find a kindred spirit: a stick figure from Finland<span aria-hidden='true'>Next <svg class='icon' viewbox='0 0 24 24' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' aria-hidden='true'>
+  
+  <line x1="4" y1="12" x2="20" y2="12"/>
+  <polyline points="14 6 20 12 14 18"/>
+  
+</svg>
+</span>
+      </a>
     </div></div>
 </nav>
 
