--- a/englishnews/theguardian/trumpnews_0807/index.html
+++ b/englishnews/theguardian/trumpnews_0807/index.html
@@ -98,6 +98,8 @@ Hours after saying he had a &ldquo;very good meeting&rdquo; with the publisher o
       </li><li>
         <a href='/tags/nature' style='font-size:1em'>Nature</a>
       </li><li>
+        <a href='/tags/newyorktimes' style='font-size:1em'>NewYorkTimes</a>
+      </li><li>
         <a href='/tags/deployment' style='font-size:1em'>Deployment</a>
       </li><li>
         <a href='/tags/hugo' style='font-size:2em'>Hugo</a>
