--- a/web/staticsitegenerator/hugo/usehugo_2/index.html
+++ b/web/staticsitegenerator/hugo/usehugo_2/index.html
@@ -94,6 +94,8 @@ config.toml Hugo 網站主要是透過 config.toml 這個檔案來調控, 當你
       </li><li>
         <a href='/tags/nature' style='font-size:1em'>Nature</a>
       </li><li>
+        <a href='/tags/newyorktimes' style='font-size:1em'>NewYorkTimes</a>
+      </li><li>
         <a href='/tags/deployment' style='font-size:1em'>Deployment</a>
       </li><li>
         <a href='/tags/hugo' style='font-size:2em'>Hugo</a>
