1. new a english study post about Apple stock market valuation.

--- a/developmenttools/iterm2setting/index.html
+++ b/developmenttools/iterm2setting/index.html
@@ -100,6 +100,8 @@ $ wget https://github.com/robbyrussell/oh-my-zsh/raw/master/tools/install.sh $ b
       </li><li>
         <a href='/tags/newyorktimes' style='font-size:1em'>NewYorkTimes</a>
       </li><li>
+        <a href='/tags/reuters' style='font-size:1em'>Reuters</a>
+      </li><li>
         <a href='/tags/deployment' style='font-size:1em'>Deployment</a>
       </li><li>
         <a href='/tags/hugo' style='font-size:2em'>Hugo</a>
