--- a/englishnews/nature/thereiswateronmars_0806/index.html
+++ b/englishnews/nature/thereiswateronmars_0806/index.html
@@ -100,6 +100,8 @@ A large saltwater lake seems to lurk under ice near Mars&rsquo; south pole. If c
       </li><li>
         <a href='/tags/newyorktimes' style='font-size:1em'>NewYorkTimes</a>
       </li><li>
+        <a href='/tags/reuters' style='font-size:1em'>Reuters</a>
+      </li><li>
         <a href='/tags/deployment' style='font-size:1em'>Deployment</a>
       </li><li>
         <a href='/tags/hugo' style='font-size:2em'>Hugo</a>
