--- a/englishnews/newyorktimes/chinaintroverts_0815/index.html
+++ b/englishnews/newyorktimes/chinaintroverts_0815/index.html
@@ -92,6 +92,8 @@ The &ldquo;Finnish Nightmares&rdquo; comic series documents the social challenge
       </li><li>
         <a href='/tags/newyorktimes' style='font-size:1em'>NewYorkTimes</a>
       </li><li>
+        <a href='/tags/reuters' style='font-size:1em'>Reuters</a>
+      </li><li>
         <a href='/tags/deployment' style='font-size:1em'>Deployment</a>
       </li><li>
         <a href='/tags/hugo' style='font-size:2em'>Hugo</a>
@@ -280,7 +282,7 @@ The series has been <a href="#trending"><strong>trending</strong></a><a name="tr
 </blockquote>
 
 <ul>
-<li><a name="#invaded"></a><strong>invaded</strong>:(a) 被侵犯的; <strong>invade</strong>:(v) [ɪn&rsquo;veɪd] 侵入; 侵擾 <a href="#invaded_">back</a></li>
+<li><a name="invaded"></a><strong>invaded</strong>:(a) 被侵犯的; <strong>invade</strong>:(v) [ɪn&rsquo;veɪd] 侵入; 侵擾 <a href="#invaded_">back</a></li>
 </ul>
 
 <blockquote>
@@ -559,6 +561,16 @@ The series has been <a href="#trending"><strong>trending</strong></a><a name="tr
 </svg>
  Previous</span>
         <span class='screen-reader-text'>Previous post: </span>[MIT] Genetic genealogy is now solving recent crimes, not just cold cases</a>
+    </div><div class='next-entry sep-before'>
+      <a href='/englishnews/reuters/applebreachesonetrillion_0816/'>
+        <span class='screen-reader-text'>Next post: </span>[Reuters] Apple breaches $1 trillion stock market valuation<span aria-hidden='true'>Next <svg class='icon' viewbox='0 0 24 24' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' aria-hidden='true'>
+  
+  <line x1="4" y1="12" x2="20" y2="12"/>
+  <polyline points="14 6 20 12 14 18"/>
+  
+</svg>
+</span>
+      </a>
     </div></div>
 </nav>
 
