--- a/developmenttools/gitstudy/gitrelated_1/index.html
+++ b/developmenttools/gitstudy/gitrelated_1/index.html
@@ -98,6 +98,8 @@
       </li><li>
         <a href='/tags/newyorktimes' style='font-size:1em'>NewYorkTimes</a>
       </li><li>
+        <a href='/tags/reuters' style='font-size:1em'>Reuters</a>
+      </li><li>
         <a href='/tags/deployment' style='font-size:1em'>Deployment</a>
       </li><li>
         <a href='/tags/hugo' style='font-size:2em'>Hugo</a>
