--- a/englishnews/mit/geneticgenealory_0814/index.html
+++ b/englishnews/mit/geneticgenealory_0814/index.html
@@ -102,6 +102,8 @@ What are the implications of these proposals?'>
       </li><li>
         <a href='/tags/newyorktimes' style='font-size:1em'>NewYorkTimes</a>
       </li><li>
+        <a href='/tags/reuters' style='font-size:1em'>Reuters</a>
+      </li><li>
         <a href='/tags/deployment' style='font-size:1em'>Deployment</a>
       </li><li>
         <a href='/tags/hugo' style='font-size:2em'>Hugo</a>
