--- a/web/deployment/githubblog/usegithub_1/index.html
+++ b/web/deployment/githubblog/usegithub_1/index.html
@@ -92,6 +92,8 @@ refer to: What is GitHub Pages?
       </li><li>
         <a href='/tags/newyorktimes' style='font-size:1em'>NewYorkTimes</a>
       </li><li>
+        <a href='/tags/reuters' style='font-size:1em'>Reuters</a>
+      </li><li>
         <a href='/tags/deployment' style='font-size:1em'>Deployment</a>
       </li><li>
         <a href='/tags/hugo' style='font-size:2em'>Hugo</a>
