add some sentence into the post of Apple stock market valuation.

--- a/englishnews/reuters/applebreachesonetrillion_0816/index.html
+++ b/englishnews/reuters/applebreachesonetrillion_0816/index.html
@@ -338,6 +338,12 @@ that <a href="#transform"><strong>transformed</strong></a><a name="transform_"><
 
 <blockquote>
 <p>Our goals need other people to help us <strong>along the way</strong>. 在我们向着目标前进的途中需要别人的帮助.</p>
+
+<p><strong>Along the way</strong>, the map of my life got better.
+一路走來, 我的人生地圖越來越精彩.</p>
+
+<p>I prefer to take my time and enjoy the scenery <strong>along the way</strong>.
+我喜歡花時間享受沿途的風景.</p>
 </blockquote>
 
 <ul>
@@ -384,6 +390,9 @@ that <a href="#transform"><strong>transformed</strong></a><a name="transform_"><
 
 <blockquote>
 <p>New housing developments <strong>mushroomed</strong> on the edge of town. 城郊新住宅区雨后春笋般地冒出来.</p>
+
+<p>Its debt <strong>mashroomed</strong>, and global banks pulled back from advising the company last year.
+去年, 他的債務激增, 全球銀行也退出了該公司的顧問業務.</p>
 </blockquote>
 
 <hr />
@@ -433,6 +442,9 @@ that <a href="#transform"><strong>transformed</strong></a><a name="transform_"><
 <blockquote>
 <p>Do you plan to go for debt or <strong>equity</strong> financing?
 你是打算进行债务融资还是股权融资？</p>
+
+<p>Officials worry the weak <strong>equity</strong> market couldn&rsquo;t absorb such large share offerings.
+官員們擔心疲弱的股市無法承受如此大規模的股票發行.</p>
 </blockquote>
 
 <ul>
@@ -443,6 +455,9 @@ that <a href="#transform"><strong>transformed</strong></a><a name="transform_"><
 <p>the value of a company&rsquo;s <strong>assets</strong>. 公司的资产价值.</p>
 
 <p>a corporation with $9 billion in <strong>assets</strong>. 一家拥有90亿美元资产的公司</p>
+
+<p>Instead of buying when prices recovered, he cut costs and sold <strong>assets</strong>.
+他沒有在價格回升時買進, 而是削減成本並出售資產.</p>
 </blockquote>
 
 </div>
