1. new a english study post about Space force.

--- a/englishnews/reuters/applebreachesonetrillion_0816/index.html
+++ b/englishnews/reuters/applebreachesonetrillion_0816/index.html
@@ -76,8 +76,6 @@
 
   <div class='container list-container'>
   <ul class='list taxonomy-cloud no-shuffle'><li>
-        <a href='/tags/economist' style='font-size:1em'>Economist</a>
-      </li><li>
         <a href='/tags/git' style='font-size:1em'>Git</a>
       </li><li>
         <a href='/tags/github' style='font-size:1em'>GitHub</a>
@@ -91,6 +89,8 @@
         <a href='/tags/newyorktimes' style='font-size:1em'>NewYorkTimes</a>
       </li><li>
         <a href='/tags/reuters' style='font-size:1em'>Reuters</a>
+      </li><li>
+        <a href='/tags/washingtonpost' style='font-size:1em'>WashingtonPost</a>
       </li><li>
         <a href='/tags/deployment' style='font-size:1em'>Deployment</a>
       </li><li>
@@ -500,6 +500,16 @@ that <a href="#transform"><strong>transformed</strong></a><a name="transform_"><
 </svg>
  Previous</span>
         <span class='screen-reader-text'>Previous post: </span>[New York Times] China&#39;s introverts find a kindred spirit: a stick figure from Finland</a>
+    </div><div class='next-entry sep-before'>
+      <a href='/englishnews/washingtonpost/spaceforce_0820/'>
+        <span class='screen-reader-text'>Next post: </span>[Washington Post] Pentagon is moving toward estabilishing Trump&#39;s Space Force<span aria-hidden='true'>Next <svg class='icon' viewbox='0 0 24 24' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' aria-hidden='true'>
+  
+  <line x1="4" y1="12" x2="20" y2="12"/>
+  <polyline points="14 6 20 12 14 18"/>
+  
+</svg>
+</span>
+      </a>
     </div></div>
 </nav>
 
