--- a/englishnews/nature/thereiswateronmars_0806/index.html
+++ b/englishnews/nature/thereiswateronmars_0806/index.html
@@ -86,8 +86,6 @@ A large saltwater lake seems to lurk under ice near Mars&rsquo; south pole. If c
 
   <div class='container list-container'>
   <ul class='list taxonomy-cloud no-shuffle'><li>
-        <a href='/tags/economist' style='font-size:1em'>Economist</a>
-      </li><li>
         <a href='/tags/git' style='font-size:1em'>Git</a>
       </li><li>
         <a href='/tags/github' style='font-size:1em'>GitHub</a>
@@ -101,6 +99,8 @@ A large saltwater lake seems to lurk under ice near Mars&rsquo; south pole. If c
         <a href='/tags/newyorktimes' style='font-size:1em'>NewYorkTimes</a>
       </li><li>
         <a href='/tags/reuters' style='font-size:1em'>Reuters</a>
+      </li><li>
+        <a href='/tags/washingtonpost' style='font-size:1em'>WashingtonPost</a>
       </li><li>
         <a href='/tags/deployment' style='font-size:1em'>Deployment</a>
       </li><li>
@@ -318,17 +318,7 @@ A large saltwater lake seems to lurk under ice near Mars&rsquo; south pole. If c
 </article>
 
 <nav class='entry-nav'>
-  <div class='container'><div class='prev-entry sep-before'>
-      <a href='/englishnews/theeconomist/googlenews_0803/'>
-        <span aria-hidden='true'><svg class='icon' viewbox='0 0 24 24' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' aria-hidden='true'>
-  
-  <line x1="20" y1="12" x2="4" y2="12"/>
-  <polyline points="10 18 4 12 10 6"/>
-  
-</svg>
- Previous</span>
-        <span class='screen-reader-text'>Previous post: </span>Europe VS Google: high fines, meagre results</a>
-    </div><div class='next-entry sep-before'>
+  <div class='container'><div class='next-entry sep-before'>
       <a href='/englishnews/theguardian/trumpnews_0807/'>
         <span class='screen-reader-text'>Next post: </span>Trump blasts back after Times publisher decries &#39;enemy of the people&#39; attacks<span aria-hidden='true'>Next <svg class='icon' viewbox='0 0 24 24' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' aria-hidden='true'>
   
