--- a/englishnews/newyorktimes/chinaintroverts_0815/index.html
+++ b/englishnews/newyorktimes/chinaintroverts_0815/index.html
@@ -78,8 +78,6 @@ The &ldquo;Finnish Nightmares&rdquo; comic series documents the social challenge
 
   <div class='container list-container'>
   <ul class='list taxonomy-cloud no-shuffle'><li>
-        <a href='/tags/economist' style='font-size:1em'>Economist</a>
-      </li><li>
         <a href='/tags/git' style='font-size:1em'>Git</a>
       </li><li>
         <a href='/tags/github' style='font-size:1em'>GitHub</a>
@@ -93,6 +91,8 @@ The &ldquo;Finnish Nightmares&rdquo; comic series documents the social challenge
         <a href='/tags/newyorktimes' style='font-size:1em'>NewYorkTimes</a>
       </li><li>
         <a href='/tags/reuters' style='font-size:1em'>Reuters</a>
+      </li><li>
+        <a href='/tags/washingtonpost' style='font-size:1em'>WashingtonPost</a>
       </li><li>
         <a href='/tags/deployment' style='font-size:1em'>Deployment</a>
       </li><li>
