modified english study post of Space force.

--- a/englishnews/washingtonpost/spaceforce_0820/index.html
+++ b/englishnews/washingtonpost/spaceforce_0820/index.html
@@ -193,7 +193,7 @@ In a speech at the Pentagon Thursday at 11:15 a.m., Vice President Mike Pence is
   <polyline points="12 6 12 12 15 15"/>
   
 </svg>
-5 mins read
+6 mins read
 </span>
 
 
@@ -237,15 +237,18 @@ In a speech at the Pentagon Thursday at 11:15 a.m., Vice President Mike Pence is
 <ul>
 <li><p><a name="movetoward"></a><strong>move toward v-ing</strong>: <strong>醞釀</strong>, 準備, 傾向於幹一件事   <a href="#movetoward_">back</a></p></li>
 
-<li><p><a name="fulfilling"></a><strong>fulfill</strong>:(v) [ful&rsquo;fil] 實現 <a href="#fulfilling_">back</a></p></li>
+<li><p><a name="fulfilling"></a><strong>fulfil</strong>:(v) [ful&rsquo;fil] 履行, 執行, 實現  <a href="#fulfilling_">back</a></p></li>
 </ul>
 
 <blockquote>
-<p>I know that I have a purpose in this world and I live to <strong>fulfill</strong> this purpose.
+<p>I know that I have a purpose in this world and I live to <strong>fulfil</strong> this purpose.
 我知道我来到这个世上是有目标的，我活着就是为了实现这个目标.</p>
 
-<p>You should <strong>fulfill</strong> your promise once your made it.
+<p>You should <strong>fulfil</strong> your promise once your made it.
 做人要言出必行.</p>
+
+<p>Brad is someone who <strong>fulfils</strong> his commitments.
+Brad是一個履行承諾的人.</p>
 </blockquote>
 
 <ul>
@@ -278,6 +281,9 @@ In a speech at the Pentagon Thursday at 11:15 a.m., Vice President Mike Pence is
 </ul>
 
 <blockquote>
+<p>Maxwell listened closely as Johnson <strong>laid out</strong> his plan.
+Maxwell 仔細聽著 Johnson 講解他的計畫.</p>
+
 <p>She <strong>laid out</strong> her plans for the new house.</p>
 </blockquote>
 
@@ -309,14 +315,20 @@ In a speech at the Pentagon Thursday at 11:15 a.m., Vice President Mike Pence is
 <hr />
 
 <ul>
-<li><p><a name="calls"></a><strong>calls</strong>(n): 呼籲; 號招  <a href="#calls_">back</a></p></li>
+<li><p><a name="calls"></a><strong>a call for sth</strong>(n): 對某事的呼籲; 號招  <a href="#calls_">back</a></p></li>
 
-<li><p><a name="reluctance"></a><strong>reluctance</strong>:(n) [rɪ&rsquo;lʌkt(ə)ns] 阻力; 磁阻; 勉強; 不情願    <a href="#reluctance_">back</a></p></li>
+<li><p><a name="reluctance"></a><strong>reluctance</strong>:(n) [rɪ&rsquo;lʌkt(ə)ns] 勉強; 不情願, unwillingness; 阻力; 磁阻; do sth with reluctance; sb. is reluctant to do sth.    <a href="#reluctance_">back</a></p></li>
 </ul>
 
 <blockquote>
+<p>&ldquo;In the beginning, there was a little <strong>reluctance</strong> - people were emotional,&rdquo; he said.
+&ldquo;最初人們都有些許的不情願-人們都是情緒化的,&ldquo;他說</p>
+
 <p>The Netherlands, Slovakia and Austria have also expressed <strong>reluctance</strong> on the issue.
 荷兰、斯洛伐克和奥地利在这个问题上也有不情愿的表示.</p>
+
+<p>He admits he&rsquo;s wrong with <strong>reluctance</strong>. / He is reluctant to admit he&rsquo;s wrong.
+他萬般不情願地承認他的錯誤.</p>
 </blockquote>
 
 <ul>
@@ -350,6 +362,9 @@ In a speech at the Pentagon Thursday at 11:15 a.m., Vice President Mike Pence is
 <blockquote>
 <p>They are in a better position to recognize and address an emerging threat in time than a centralized <strong>bureaucracy</strong>.
 比起集中式官僚机构来，他们在识别和处理突发威胁方面处于一个更有利的位置.</p>
+
+<p>I had to deal with the university&rsquo;s <strong>bureaucracy</strong> when I was applying for financial aid.
+申請經濟援助的時候, 我不得不應對這所大學裡的官僚主義.</p>
 </blockquote>
 
 <ul>
