1. new a Julia post. 2. new a english study post about Japanese discrimination.

--- a/englishnews/theguardian/trumpnews_0807/index.html
+++ b/englishnews/theguardian/trumpnews_0807/index.html
@@ -86,15 +86,17 @@ Hours after saying he had a &ldquo;very good meeting&rdquo; with the publisher o
 
   <div class='container list-container'>
   <ul class='list taxonomy-cloud no-shuffle'><li>
+        <a href='/tags/economist' style='font-size:1em'>Economist</a>
+      </li><li>
         <a href='/tags/git' style='font-size:1em'>Git</a>
       </li><li>
         <a href='/tags/github' style='font-size:1em'>GitHub</a>
       </li><li>
         <a href='/tags/guardian' style='font-size:1em'>Guardian</a>
       </li><li>
-        <a href='/tags/mit' style='font-size:1.5em'>MIT</a>
+        <a href='/tags/julia' style='font-size:1em'>Julia</a>
       </li><li>
-        <a href='/tags/nature' style='font-size:1em'>Nature</a>
+        <a href='/tags/mit' style='font-size:1.5em'>MIT</a>
       </li><li>
         <a href='/tags/newyorktimes' style='font-size:1em'>NewYorkTimes</a>
       </li><li>
@@ -312,17 +314,7 @@ Hours after saying he had a &ldquo;very good meeting&rdquo; with the publisher o
 </article>
 
 <nav class='entry-nav'>
-  <div class='container'><div class='prev-entry sep-before'>
-      <a href='/englishnews/nature/thereiswateronmars_0806/'>
-        <span aria-hidden='true'><svg class='icon' viewbox='0 0 24 24' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' aria-hidden='true'>
-  
-  <line x1="20" y1="12" x2="4" y2="12"/>
-  <polyline points="10 18 4 12 10 6"/>
-  
-</svg>
- Previous</span>
-        <span class='screen-reader-text'>Previous post: </span>There&#39;s water on Mars! Signs of buried lake tantalize scientists.</a>
-    </div><div class='next-entry sep-before'>
+  <div class='container'><div class='next-entry sep-before'>
       <a href='/englishnews/mit/therapistswithvr_0808/'>
         <span class='screen-reader-text'>Next post: </span>[MIT] Therapists are augmenting eating-disorder treatment with virtual-reality headsets<span aria-hidden='true'>Next <svg class='icon' viewbox='0 0 24 24' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' aria-hidden='true'>
   
