--- a/englishnews/washingtonpost/spaceforce_0820/index.html
+++ b/englishnews/washingtonpost/spaceforce_0820/index.html
@@ -76,15 +76,17 @@ In a speech at the Pentagon Thursday at 11:15 a.m., Vice President Mike Pence is
 
   <div class='container list-container'>
   <ul class='list taxonomy-cloud no-shuffle'><li>
+        <a href='/tags/economist' style='font-size:1em'>Economist</a>
+      </li><li>
         <a href='/tags/git' style='font-size:1em'>Git</a>
       </li><li>
         <a href='/tags/github' style='font-size:1em'>GitHub</a>
       </li><li>
         <a href='/tags/guardian' style='font-size:1em'>Guardian</a>
       </li><li>
-        <a href='/tags/mit' style='font-size:1.5em'>MIT</a>
+        <a href='/tags/julia' style='font-size:1em'>Julia</a>
       </li><li>
-        <a href='/tags/nature' style='font-size:1em'>Nature</a>
+        <a href='/tags/mit' style='font-size:1.5em'>MIT</a>
       </li><li>
         <a href='/tags/newyorktimes' style='font-size:1em'>NewYorkTimes</a>
       </li><li>
@@ -525,6 +527,16 @@ A Space Force, dedicated to space <strong>the way</strong> the Navy is to the se
 </svg>
  Previous</span>
         <span class='screen-reader-text'>Previous post: </span>[Reuters] Apple breaches $1 trillion stock market valuation</a>
+    </div><div class='next-entry sep-before'>
+      <a href='/englishnews/theeconomist/japanesediscrimination_0821/'>
+        <span class='screen-reader-text'>Next post: </span>[The Economist] Test-doctoring to keep Japanese women out of medical school<span aria-hidden='true'>Next <svg class='icon' viewbox='0 0 24 24' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' aria-hidden='true'>
+  
+  <line x1="4" y1="12" x2="20" y2="12"/>
+  <polyline points="14 6 20 12 14 18"/>
+  
+</svg>
+</span>
+      </a>
     </div></div>
 </nav>
 
