1. new a english study post about troll account called allforusa.

--- a/englishnews/theeconomist/japanesediscrimination_0821/index.html
+++ b/englishnews/theeconomist/japanesediscrimination_0821/index.html
@@ -90,7 +90,7 @@
       </li><li>
         <a href='/tags/reuters' style='font-size:1em'>Reuters</a>
       </li><li>
-        <a href='/tags/washingtonpost' style='font-size:1em'>WashingtonPost</a>
+        <a href='/tags/washingtonpost' style='font-size:1.5em'>WashingtonPost</a>
       </li><li>
         <a href='/tags/deployment' style='font-size:1em'>Deployment</a>
       </li><li>
@@ -578,6 +578,16 @@ Hutter 教授的态度极为傲慢.</p>
 </svg>
  Previous</span>
         <span class='screen-reader-text'>Previous post: </span>[Washington Post] Pentagon is moving toward estabilishing Trump&#39;s Space Force</a>
+    </div><div class='next-entry sep-before'>
+      <a href='/englishnews/washingtonpost/trollaccount_0823/'>
+        <span class='screen-reader-text'>Next post: </span>[Washington Post] The strange birth, death and rebirth of a Russian troll account called &#34;AllForUSA&#34;<span aria-hidden='true'>Next <svg class='icon' viewbox='0 0 24 24' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' aria-hidden='true'>
+  
+  <line x1="4" y1="12" x2="20" y2="12"/>
+  <polyline points="14 6 20 12 14 18"/>
+  
+</svg>
+</span>
+      </a>
     </div></div>
 </nav>
 
