--- a/developmenttools/iterm2setting/index.html
+++ b/developmenttools/iterm2setting/index.html
@@ -86,6 +86,8 @@ $ wget https://github.com/robbyrussell/oh-my-zsh/raw/master/tools/install.sh $ b
 
   <div class='container list-container'>
   <ul class='list taxonomy-cloud no-shuffle'><li>
+        <a href='/tags/bbc_news' style='font-size:1em'>BBC_News</a>
+      </li><li>
         <a href='/tags/economist' style='font-size:1em'>Economist</a>
       </li><li>
         <a href='/tags/git' style='font-size:1em'>Git</a>
