--- a/englishnews/newyorktimes/chinaintroverts_0815/index.html
+++ b/englishnews/newyorktimes/chinaintroverts_0815/index.html
@@ -78,6 +78,8 @@ The &ldquo;Finnish Nightmares&rdquo; comic series documents the social challenge
 
   <div class='container list-container'>
   <ul class='list taxonomy-cloud no-shuffle'><li>
+        <a href='/tags/bbc_news' style='font-size:1em'>BBC_News</a>
+      </li><li>
         <a href='/tags/economist' style='font-size:1em'>Economist</a>
       </li><li>
         <a href='/tags/git' style='font-size:1em'>Git</a>
