--- a/englishnews/theeconomist/japanesediscrimination_0821/index.html
+++ b/englishnews/theeconomist/japanesediscrimination_0821/index.html
@@ -74,6 +74,8 @@
 
   <div class='container list-container'>
   <ul class='list taxonomy-cloud no-shuffle'><li>
+        <a href='/tags/bbc_news' style='font-size:1em'>BBC_News</a>
+      </li><li>
         <a href='/tags/economist' style='font-size:1em'>Economist</a>
       </li><li>
         <a href='/tags/git' style='font-size:1em'>Git</a>
