--- a/englishnews/washingtonpost/spaceforce_0820/index.html
+++ b/englishnews/washingtonpost/spaceforce_0820/index.html
@@ -76,6 +76,8 @@ In a speech at the Pentagon Thursday at 11:15 a.m., Vice President Mike Pence is
 
   <div class='container list-container'>
   <ul class='list taxonomy-cloud no-shuffle'><li>
+        <a href='/tags/bbc_news' style='font-size:1em'>BBC_News</a>
+      </li><li>
         <a href='/tags/economist' style='font-size:1em'>Economist</a>
       </li><li>
         <a href='/tags/git' style='font-size:1em'>Git</a>
