--- a/web/staticsitegenerator/hugo/usehugo_1/index.html
+++ b/web/staticsitegenerator/hugo/usehugo_1/index.html
@@ -88,6 +88,8 @@ $ hugo version Hugo Static Site Generator v0.42.2 darwin/amd64  建立網站 $ h
 
   <div class='container list-container'>
   <ul class='list taxonomy-cloud no-shuffle'><li>
+        <a href='/tags/bbc_news' style='font-size:1em'>BBC_News</a>
+      </li><li>
         <a href='/tags/economist' style='font-size:1em'>Economist</a>
       </li><li>
         <a href='/tags/git' style='font-size:1em'>Git</a>
