1. new a english study post about Nobel laureate. 2. add some notes on 0824,0823 post.

--- a/englishnews/BBCNews/elonmusk_0824/index.html
+++ b/englishnews/BBCNews/elonmusk_0824/index.html
@@ -90,7 +90,7 @@ If it turns out his Twitter promise - that he has secured the tens of billions o
       </li><li>
         <a href='/tags/mit' style='font-size:1.5em'>MIT</a>
       </li><li>
-        <a href='/tags/newyorktimes' style='font-size:1em'>NewYorkTimes</a>
+        <a href='/tags/newyorktimes' style='font-size:1.5em'>NewYorkTimes</a>
       </li><li>
         <a href='/tags/reuters' style='font-size:1em'>Reuters</a>
       </li><li>
@@ -255,6 +255,9 @@ If it turns out his Twitter promise - that he has secured the tens of billions o
 
 <p>her <strong>mercurial</strong> wit.
 她的机智.</p>
+
+<p>There are a lot of high stakes and a lot of uncertainty because Trump is <strong>mercurial</strong>.
+由於 Trump 是反復無常的, 因此存在很多高風險和很多不確定性.</p>
 </blockquote>
 
 <ul>
@@ -282,6 +285,9 @@ Rick 一向擅长外语.</p>
 <blockquote>
 <p>Redfern <strong>stunned</strong> the crowd with a last-minute goal.
 Redfern 在最后一分钟进球，使观众很是震惊.</p>
+
+<p>Russell&rsquo;s family said in a statement that they were <strong>stunned</strong> and heartbroken.
+Russell 的家人在一份聲明中表示, 他們大為震驚, 傷心欲絕.</p>
 </blockquote>
 
 <ul>
@@ -300,6 +306,9 @@ Redfern 在最后一分钟进球，使观众很是震惊.</p>
 <blockquote>
 <p>Then came the <strong>bombshell</strong>: the factory was to close down.
 接着传来了令人震惊的消息: 工厂要关闭了.</p>
+
+<p>As for the final <strong>bombshell</strong>, more on that later.
+至於最後的重磅炸彈, 稍後帶來更多相關報導.</p>
 </blockquote>
 
 <hr />
@@ -341,6 +350,9 @@ Redfern 在最后一分钟进球，使观众很是震惊.</p>
 <blockquote>
 <p>My knowledge of history is a little <strong>shaky</strong>.
 我的历史知识有点靠不住.</p>
+
+<p>His command is too spotty, his results are too inconsistent, his confidence is too <strong>shaky</strong>.
+他的指令零碎殘缺, 他的業績忽上忽下, 他的自信搖搖欲墜.</p>
 </blockquote>
 
 <ul>
@@ -380,6 +392,12 @@ Redfern 在最后一分钟进球，使观众很是震惊.</p>
 
 <p>Revealing confidential information to a rival company could <strong>land</strong> you <strong>in</strong> serious trouble with your boss.
 向竞争对手泄露公司秘密的话，你的老板不会轻饶了你.</p>
+
+<p>I hope you realize that this investigation could <strong>land us in</strong> prison.
+我希望你意識到這次調查可能讓我們入獄.</p>
+
+<p>Failure in the final exam will <strong>land him in</strong> trouble.
+期末考試沒考過會搞他惹上麻煩.</p>
 </blockquote>
 
 <ul>
@@ -507,6 +525,16 @@ Redfern 在最后一分钟进球，使观众很是震惊.</p>
 </svg>
  Previous</span>
         <span class='screen-reader-text'>Previous post: </span>[Washington Post] The strange birth, death and rebirth of a Russian troll account called &#34;AllForUSA&#34;</a>
+    </div><div class='next-entry sep-before'>
+      <a href='/englishnews/newyorktimes/naipaul_0825/'>
+        <span class='screen-reader-text'>Next post: </span>[New York Times] V.S. Naipaul, who explored colonialism through unsparing books, dies at 85<span aria-hidden='true'>Next <svg class='icon' viewbox='0 0 24 24' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' aria-hidden='true'>
+  
+  <line x1="4" y1="12" x2="20" y2="12"/>
+  <polyline points="14 6 20 12 14 18"/>
+  
+</svg>
+</span>
+      </a>
     </div></div>
 </nav>
 
