--- a/englishnews/washingtonpost/trollaccount_0823/index.html
+++ b/englishnews/washingtonpost/trollaccount_0823/index.html
@@ -92,7 +92,7 @@ As the 2016 presidential campaign heated up, AllForUSA.com suddenly bristled wit
       </li><li>
         <a href='/tags/mit' style='font-size:1.5em'>MIT</a>
       </li><li>
-        <a href='/tags/newyorktimes' style='font-size:1em'>NewYorkTimes</a>
+        <a href='/tags/newyorktimes' style='font-size:1.5em'>NewYorkTimes</a>
       </li><li>
         <a href='/tags/reuters' style='font-size:1em'>Reuters</a>
       </li><li>
@@ -295,12 +295,18 @@ As the 2016 presidential campaign heated up, AllForUSA.com suddenly bristled wit
 </blockquote>
 
 <ul>
-<li><a name="heated_up"></a><strong>heated up</strong>:(phrasal v) 升溫, when a situation <em>heats up</em>, things start to happen much more quickly and with increased interest and excitement among the people involved. <a href="#heated_up_">back</a></li>
+<li><a name="heated_up"></a><strong>heat up</strong>:(phrasal v) 加劇, 升溫, when a situation <em>heats up</em>, things start to happen much more quickly and with increased interest and excitement among the people involved.   <a href="#heated_up_">back</a></li>
 </ul>
 
 <blockquote>
 <p>Then in the last couple of years, the movement for democracy began to <strong>heat up</strong>.
 于是在过去几年里，民主运动开始升温.</p>
+
+<p>Pipes expand as they <strong>heat up</strong>.
+管子受熱就會膨脹.</p>
+
+<p>The action really begins to <strong>heat up</strong>.
+劇情真正開始緊張.</p>
 </blockquote>
 
 <ul>
@@ -345,7 +351,10 @@ As the 2016 presidential campaign heated up, AllForUSA.com suddenly bristled wit
 他动不动就大肆抨击工会.</p>
 
 <p>&ldquo;I&rsquo;ll help you <strong>bash</strong> them in the media,&rdquo; he said.
-“我会帮助你在媒体上痛击他们。” 他说。</p>
+“我会帮助你在媒体上痛击他们.” 他说.</p>
+
+<p>For Trump, of course, <strong>bashing</strong> the press is a sport akin to professional wrestling.
+當然, 對 Trump 來說, 抨擊媒體是和職業摔跤類似的運動.</p>
 </blockquote>
 
 <ul>
@@ -416,7 +425,10 @@ As the 2016 presidential campaign heated up, AllForUSA.com suddenly bristled wit
 
 <blockquote>
 <p>This led to his <strong>indictment</strong> on allegations of conspiracy.
-这件事最终使他被控犯有共谋罪</p>
+这件事最终使他被控犯有共谋罪.</p>
+
+<p>Brown said Tuesday that the <strong>indictment</strong> was unsurprising and appropriate.
+Brown 在週二表示指控是情理之中, 恰如其分.</p>
 </blockquote>
 
 <ul>
@@ -479,12 +491,15 @@ As the 2016 presidential campaign heated up, AllForUSA.com suddenly bristled wit
 <li><a name="breaches"></a><strong>data breach</strong>:(n) [briːtʃ] 數據外洩  <a href="#breaches_">back</a></li>
 </ul>
 
-<hr />
-
 <blockquote>
 <p>Verizon&rsquo;s recent <strong>data breach</strong> investigation shows 76% of hacks are caused by weak or stolen passwords.
 Verizon最近发布的数据泄露调查显示，76%的黑客入侵是帐户密码太弱或被窃造成的</p>
+
+<p>On Friday an armored vehicle <strong>breached</strong> the front door.
+週五一輛武器載具突破了前門.</p>
 </blockquote>
+
+<hr />
 
 <ul>
 <li><a name="fuel"></a><strong>fuel</strong>:(v) [fjʊəl] 助長, 惡化, to make something, especially something <em>bad</em>, increase or become stronger.   <a href="#fuel_">back</a></li>
