1. new a english study post about Reuters news.

--- a/englishnews/newyorktimes/naipaul_0825/index.html
+++ b/englishnews/newyorktimes/naipaul_0825/index.html
@@ -92,7 +92,7 @@ His family confirmed the death in a statement, The Associated Press reported.'>
       </li><li>
         <a href='/tags/newyorktimes' style='font-size:1.5em'>NewYorkTimes</a>
       </li><li>
-        <a href='/tags/reuters' style='font-size:1em'>Reuters</a>
+        <a href='/tags/reuters' style='font-size:1.5em'>Reuters</a>
       </li><li>
         <a href='/tags/washingtonpost' style='font-size:1.5em'>WashingtonPost</a>
       </li><li>
@@ -619,6 +619,16 @@ DNA 掌握著關鍵要素: 多樣性, 血統以及哪些特徵會傳給後代.</
 </svg>
  Previous</span>
         <span class='screen-reader-text'>Previous post: </span>[BBC News] Elon Musk is playing a dangerous game</a>
+    </div><div class='next-entry sep-before'>
+      <a href='/englishnews/reuters/alaskaairlines_0826/'>
+        <span class='screen-reader-text'>Next post: </span>[Reuters] FBI seeks motive after U.S. airline worker steals plane, crashes it<span aria-hidden='true'>Next <svg class='icon' viewbox='0 0 24 24' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' aria-hidden='true'>
+  
+  <line x1="4" y1="12" x2="20" y2="12"/>
+  <polyline points="14 6 20 12 14 18"/>
+  
+</svg>
+</span>
+      </a>
     </div></div>
 </nav>
 
