add washington post english study post.

--- a/englishnews/reuters/alaskaairlines_0826/index.html
+++ b/englishnews/reuters/alaskaairlines_0826/index.html
@@ -94,7 +94,7 @@ He flew for about one hour, often erratically with attempts at aerial stunts, be
       </li><li>
         <a href='/tags/reuters' style='font-size:1.5em'>Reuters</a>
       </li><li>
-        <a href='/tags/washingtonpost' style='font-size:1.5em'>WashingtonPost</a>
+        <a href='/tags/washingtonpost' style='font-size:2em'>WashingtonPost</a>
       </li><li>
         <a href='/tags/deployment' style='font-size:1em'>Deployment</a>
       </li><li>
@@ -455,6 +455,16 @@ Rob 听到她死去的消息悲痛欲绝.</p>
 </svg>
  Previous</span>
         <span class='screen-reader-text'>Previous post: </span>[New York Times] V.S. Naipaul, who explored colonialism through unsparing books, dies at 85</a>
+    </div><div class='next-entry sep-before'>
+      <a href='/englishnews/washingtonpost/robot_news_0827/'>
+        <span class='screen-reader-text'>Next post: </span>[Washington Post] &#39;Please do not switch me off!&#39;: An experiment with a begging robot shows people hesitate to pull the plug<span aria-hidden='true'>Next <svg class='icon' viewbox='0 0 24 24' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' aria-hidden='true'>
+  
+  <line x1="4" y1="12" x2="20" y2="12"/>
+  <polyline points="14 6 20 12 14 18"/>
+  
+</svg>
+</span>
+      </a>
     </div></div>
 </nav>
 
