--- a/englishnews/washingtonpost/robot_news_0827/index.html
+++ b/englishnews/washingtonpost/robot_news_0827/index.html
@@ -88,23 +88,23 @@ In an experiment designed to investigate how people treat robots when they act l
       </li><li>
         <a href='/tags/julia' style='font-size:1em'>Julia</a>
       </li><li>
-        <a href='/tags/mit' style='font-size:1.5em'>MIT</a>
+        <a href='/tags/mit' style='font-size:1.3333333333333333em'>MIT</a>
       </li><li>
-        <a href='/tags/newyorktimes' style='font-size:1.5em'>NewYorkTimes</a>
+        <a href='/tags/newyorktimes' style='font-size:1.3333333333333333em'>NewYorkTimes</a>
       </li><li>
-        <a href='/tags/reuters' style='font-size:1.5em'>Reuters</a>
+        <a href='/tags/reuters' style='font-size:1.3333333333333333em'>Reuters</a>
       </li><li>
         <a href='/tags/washingtonpost' style='font-size:2em'>WashingtonPost</a>
       </li><li>
         <a href='/tags/deployment' style='font-size:1em'>Deployment</a>
       </li><li>
-        <a href='/tags/hugo' style='font-size:2em'>Hugo</a>
+        <a href='/tags/hugo' style='font-size:1.6666666666666665em'>Hugo</a>
       </li><li>
         <a href='/tags/iterm2' style='font-size:1em'>ITerm2</a>
       </li><li>
         <a href='/tags/zsh' style='font-size:1em'>Zsh</a>
       </li><li>
-        <a href='/tags/%E9%9D%9C%E6%85%8B%E7%B6%B2%E9%A0%81' style='font-size:2em'>靜態網頁</a>
+        <a href='/tags/%E9%9D%9C%E6%85%8B%E7%B6%B2%E9%A0%81' style='font-size:1.6666666666666665em'>靜態網頁</a>
       </li></ul>
 </div>
 
@@ -548,6 +548,16 @@ Caldwell 恳求捐款.</p>
 </svg>
  Previous</span>
         <span class='screen-reader-text'>Previous post: </span>[Reuters] FBI seeks motive after U.S. airline worker steals plane, crashes it</a>
+    </div><div class='next-entry sep-before'>
+      <a href='/englishnews/washingtonpost/bestfilms_0828/'>
+        <span class='screen-reader-text'>Next post: </span>[Washington Post] The new Canon: the best films of the 2000s<span aria-hidden='true'>Next <svg class='icon' viewbox='0 0 24 24' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' aria-hidden='true'>
+  
+  <line x1="4" y1="12" x2="20" y2="12"/>
+  <polyline points="14 6 20 12 14 18"/>
+  
+</svg>
+</span>
+      </a>
     </div></div>
 </nav>
 
